--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@redux-devtools/rtk-query-monitor": "3.1.1",
     "@reduxjs/toolkit": "1.5.1",
     "axios": "0.21.1",
     "react": "17.0.2",
